# Nereus

./: .gitignore  Cargo.toml  Containerfile  expose_enclave.sh
apps/web/: next.config.mjs
apps/web/app/: page.tsx
apps/web/app/market/: page.tsx
apps/web/components/: TradePanel.tsx  branding.tsx  category-tabs.tsx  create_wpg.tsx  navbar.tsx
apps/web/components/market/: ChatRoom.tsx  buyerRank.tsx  flip-buy-button.tsx  price-pill.tsx  sparkline.tsx
apps/web/components/walrus/: walrus-code-uploader.tsx  walrus-prompt-uploader.tsx
apps/web/store/: storeStore.ts
apps/web/store/move/: buy_no.ts  buy_yes.ts  create_config.ts  getPriceCaller.ts
enclave/: Move.toml
enclave/sources/: enclave.move
enclave/tests/: enclave_tests.move
move/nereus/script/: deploy_exists_package.sh  deploy_testnet.sh  faucet_exists_package_.sh  interact_market.sh  merge_usdc.sh
move/nereus/scripts/: deploy_exists_package.sh  deploy_testnet.sh  faucet_exists_package_.sh  interact_market.sh  switch.sh
move/nereus/sources/: market.move  truth_oracle.move  usdc.move
move/nereus/tests/: market_tests.move
nautilus_rust_runtime/: Cargo.toml
nautilus_rust_runtime/src/: main.rs
nereus/: pnpm-lock.yaml  turbo.json
nereus/apps/web/: .env.example  package.json  pnpm-lock.yaml
nereus/apps/web/app/: page.tsx
nereus/sources/: truth_oracle.move
src/host-proxy/: Cargo.toml  README.md
src/host-proxy/src/: main.rs
src/nautilus-server/: Cargo.toml  run.sh
src/nautilus-server/src/: lib.rs
src/nautilus_host_proxy/: Cargo.toml
src/nautilus_host_proxy/src/: main.rs
(+26 files in other folders)
